# AosiConn

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: .requirements_1.txt  .requirements_2.txt  Dockerfile  requirements.txt
core/app/: main.py
core/app/aosicoaLogger/: log.py
core/app/auth/: auth_bearer.py  auth_handler.py  crypt_utils.py
core/app/db/: aosiconn.db  crud.py  database.py  init_db.py  models.py  schemas.py
core/app/exchange/: bitmex.py  dydx.py  hyperliquid.py  hyprliquid.py
core/app/logger/: log.py  welcome1.txt  welcome2.txt
core/app/routes/: api.py  auth.py  base.py  dashboard.py  exchange.py  openapi.py  statistics.py  thread.py  websocket.py
core/app/schemas/: login.py  threads.py
core/app/static/: dashboard.html  login.html
core/app/utils/: metrics_service.py  router_utils.py  scheduler_manager.py  scheduler_utils.py  thread_utils.py  websocket_manager.py
deploy/systemd/: README.md  aosiconn.service  install.sh
