[project]
name = "aosiconn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt==4.0.1",
    "ccxt>=4.5.18",
    "dydx-v4-client>=1.1.5",
    "fastapi[standard]>=0.120.3",
    "hyperliquid-python-sdk>=0.20.1",
    "pandas>=2.1.0",
    "passlib>=1.7.4",
    "pyjwt>=2.12.1",
    "python-decouple>=3.8",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "ta>=0.11.0",
    "torch==2.9.1",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.32.0",
    "websockets>=12.0",
]
